--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div id="container">
-            <h1> <u> Clock Tower</u></h1>
+            <h1> <u>Ghantaghar</u></h1>
         </div>
         </header>
     <div id="MyClockDisplay" class="clock" onload="showTime()"></div>
